--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -160,8 +160,10 @@
                                             </svg>
                                         </p>
 
-                                        <div class="blue-pill__small-card-container">
+                                        <div class="pill__small-card-container">
                                             <div class="blue-pill">A</div>
+                                            <div class="red-pill">TL</div>
+                                            <div class="yellow-pill">BC</div>
                                         </div>
 
                                         <div class="hidden-card-content">
@@ -242,7 +244,133 @@
                                                 </g>
                                             </svg>
                                         </p>
-                                        <div class="blue-pill__small-card-container">
+                                        <div class="pill__small-card-container">
+                                            <div class="blue-pill">A</div>
+                                        </div>
+
+                                        <div class="hidden-card-content">
+                                            <h2>Overview of the role</h2>
+                                            <p>Collect, organise and study data to provide business insight.
+                                            </p>
+                                            <h2>Occupation summary</h2>
+                                            <p> The primary role of a Data Analyst is to collect,
+                                                organise and study data to provide business insight. Data analysts are
+                                                typically involved with managing, cleansing, abstracting and aggregating
+                                                data, and conducting a range of analytical studies on that data. They
+                                                work across a variety of projects, providing technical data solutions to
+                                                a range of stakeholders/customers issues. They document and report the
+                                                results of data analysis activities making recommendations to improve
+                                                business performance.
+                                            </p>
+                                            <a class="read-more--button">
+                                                <p>Read more</p>
+                                            </a>
+                                            <h2>Links to technical education programmes</h2>
+                                            <div class="blue-pill-container">
+                                                <div class="blue-pill">A</div>
+                                                <div class="technical-education-role--container">
+                                                    <a class="technical-education-role">Data Analyst (LV 4)</a>
+                                                </div>
+                                                <p class="technical-education-status">Approved for delivery</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="small-card">
+                                        <!-- Don't move this SVG due to JS selectors -->
+                                        <svg class="close-icon" height="8pt" viewBox="0 0 329.26933 329" width="8pt"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
+                                        </svg>
+                                        <p class="card-title">Data Architect
+                                            <svg class="heart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                                preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="39"
+                                                height="39">
+                                                <defs>
+                                                    <path class="heart-icon--path"
+                                                        d="M413.65 183.81C457.46 183.81 492.97 216.49 492.97 256.81C492.97 368.46 334.34 423.87 334.34 426.94C334.34 426.94 334.34 426.94 334.34 426.94C334.34 423.87 175.7 368.46 175.7 256.8C175.7 216.49 211.21 183.8 255.02 183.8C298.82 183.8 334.34 212.44 334.33 252.76C334.33 212.45 369.84 183.81 413.65 183.81Z"
+                                                        id="b3bqRKh6Wxxwece"></path>
+                                                </defs>
+                                                <g>
+                                                    <g>
+                                                        <g>
+                                                            <use xlink:href="#b3bqRKh6Wxxwece" opacity="1"
+                                                                fill="#ffffff" fill-opacity="1"></use>
+                                                            <g>
+                                                                <use xlink:href="#b3bqRKh6Wxxwece" opacity="1"
+                                                                    fill-opacity="0" stroke="#000000" stroke-width="7"
+                                                                    stroke-opacity="1"></use>
+                                                            </g>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </svg>
+                                        </p>
+                                        <div class="pill__small-card-container">
+                                            <div class="blue-pill">A</div>
+                                        </div>
+
+                                        <div class="hidden-card-content">
+                                            <h2>Overview of the role</h2>
+                                            <p>Collect, organise and study data to provide business insight.
+                                            </p>
+                                            <h2>Occupation summary</h2>
+                                            <p> The primary role of a Data Analyst is to collect,
+                                                organise and study data to provide business insight. Data analysts are
+                                                typically involved with managing, cleansing, abstracting and aggregating
+                                                data, and conducting a range of analytical studies on that data. They
+                                                work across a variety of projects, providing technical data solutions to
+                                                a range of stakeholders/customers issues. They document and report the
+                                                results of data analysis activities making recommendations to improve
+                                                business performance.
+                                            </p>
+                                            <a class="read-more--button">
+                                                <p>Read more</p>
+                                            </a>
+                                            <h2>Links to technical education programmes</h2>
+                                            <div class="blue-pill-container">
+                                                <div class="blue-pill">A</div>
+                                                <div class="technical-education-role--container">
+                                                    <a class="technical-education-role">Data Analyst (LV 4)</a>
+                                                </div>
+                                                <p class="technical-education-status">Approved for delivery</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="small-card">
+                                        <!-- Don't move this SVG due to JS selectors -->
+                                        <svg class="close-icon" height="8pt" viewBox="0 0 329.26933 329" width="8pt"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
+                                        </svg>
+                                        <p class="card-title">IS Business Analyst
+                                            <svg class="heart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                                preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="39"
+                                                height="39">
+                                                <defs>
+                                                    <path class="heart-icon--path"
+                                                        d="M413.65 183.81C457.46 183.81 492.97 216.49 492.97 256.81C492.97 368.46 334.34 423.87 334.34 426.94C334.34 426.94 334.34 426.94 334.34 426.94C334.34 423.87 175.7 368.46 175.7 256.8C175.7 216.49 211.21 183.8 255.02 183.8C298.82 183.8 334.34 212.44 334.33 252.76C334.33 212.45 369.84 183.81 413.65 183.81Z"
+                                                        id="b3bqRKh6Wxxwece"></path>
+                                                </defs>
+                                                <g>
+                                                    <g>
+                                                        <g>
+                                                            <use xlink:href="#b3bqRKh6Wxxwece" opacity="1"
+                                                                fill="#ffffff" fill-opacity="1"></use>
+                                                            <g>
+                                                                <use xlink:href="#b3bqRKh6Wxxwece" opacity="1"
+                                                                    fill-opacity="0" stroke="#000000" stroke-width="7"
+                                                                    stroke-opacity="1"></use>
+                                                            </g>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </svg>
+                                        </p>
+                                        <div class="pill__small-card-container">
                                             <div class="blue-pill">A</div>
                                         </div>
 
@@ -323,7 +451,7 @@
                                             </svg>
                                         </p>
 
-                                        <div class="blue-pill__small-card-container">
+                                        <div class="pill__small-card-container">
                                             <div class="blue-pill">A</div>
                                         </div>
 
